--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "vitals-app"
+      "bundleIdentifier": "vitalsApp"
     },
     "android": {
       "adaptiveIcon": {
