--- a/eas.json
+++ b/eas.json
@@ -1,8 +1,9 @@
 {
   "builds": {
     "ios": {
-      "release": {
-        "workflow": "managed"
+      "preview": {
+        "distribution": "internal",
+        "workflow": "generic"
       }
     }
   }
