Committing an update to Vitals App V5 6/9/2021

--- a/eas.json
+++ b/eas.json
@@ -1,9 +1,15 @@
 {
   "builds": {
-    "ios": {
+    "android": {
       "preview": {
         "distribution": "internal",
         "workflow": "generic"
+      },
+      "ios": {
+        "preview": {
+          "distribution": "internal",
+          "workflow": "generic"
+        }
       }
     }
   }
