Committing an update to Vitals App V7 6/9/2021

--- a/eas.json
+++ b/eas.json
@@ -3,7 +3,7 @@
     "ios": {
       "preview": {
         "distribution": "internal",
-        "workflow": "generic"
+        "workflow": "managed"
       }
     }
   }
